# multi_agent

./: .env  .env.example  .gitignore  README.md  SKILLS_INTEGRATION_SUMMARY.md  charging_data_scraper.py  main.py  pyproject.toml  test_1.py  todo.md  关于项目.md
deepinsight/: ui.py
deepinsight/api/: server.py  user_db.py
deepinsight/core/: llm.py
deepinsight/graph/: agents.py  state.py  workflow.py
deepinsight/prompts/: prompt_demo.py  prompt_tool.py
deepinsight/tests/: test_human_loop.py  test_rag_feature.py  test_search_provider.py  test_summarizer.py
deepinsight/tools/: normalizers.py  search_provider.py  vector_store.py
deepinsight/utils/: global_state.py  modes.py  normalizers.py  skill_loader.py  summarizer.py  token_utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ApprovalModal.jsx  ChatBubble.jsx  HistoryPanel.jsx  LoginModal.jsx  ReferenceSidebar.jsx
frontend/src/lib/: api.js
multi_agent/api/: server.py
multi_agent/graph/: agents.py  workflow.py
multi_agent/tools/: base.py
skills/document-summarizer-skill/: SKILL.md
skills/document-summarizer-skill/modules/: document_summarizer.py
skills/enhanced-search-tool-skill/: SKILL.md
skills/enhanced-search-tool-skill/modules/: enhanced_search_tool.py
skills/enhanced-search-tool-skill/references/: search_guide.md
skills/llm-factory-skill/: SKILL.md
skills/llm-factory-skill/modules/: llm_factory.py
skills/scene-mode-manager-skill/: SKILL.md
skills/vector-storage-skill/: SKILL.md
(+4 files in other folders)
